webpack aulas 11 att.

--- a/webpack/public/index.html
+++ b/webpack/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Capitulo Webpack</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilo.cs">
 </head>
 <body>
     <button class="botao">Teste</button>
